test/conformance/kuttl/generate/clusterpolicy/cornercases/truncate-generated-by-name-label/01-manifests.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- manifests.yaml
assert:
- manifests-assert.yaml
