test/conformance/kuttl/generate/clusterpolicy/cornercases/truncate-generated-by-name-label/02-resource.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: resource.yaml
assert:
- resource-assert.yaml
