test/conformance/kuttl/generate/clusterpolicy/cornercases/truncate-generated-by-name-label/99-cleanup.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - command: kubectl delete -f manifests.yaml,resource.yaml --force --wait=true --ignore-not-found=true
