test/conformance/kuttl/generate/clusterpolicy/cornercases/truncate-generated-by-name-label/manifests-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: generate-secret-truncate-name-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
