test/conformance/kuttl/generate/clusterpolicy/cornercases/truncate-generated-by-name-label/resource-assert.yaml
apiVersion: v1
kind: Secret
metadata:
  name: newsecret
  namespace: bar
  labels:
    kyverno.io/generated-by-name: alertmanager-kps-alertmanager-db-alertmanager-kps-a...truncated
